# substreams-uniswap

./: Cargo.toml  Makefile  README.md  build.rs  substreams.yaml
proto/: uniswap.proto
src/: lib.rs  rpc.rs  utils.rs
src/abi/: factory.rs  pair.rs
src/pb/: mod.rs  uniswap.types.v1.rs
